grammar.js
    module: ($) =>
      seq(
        optional($.package),
        // Imports are not held to the top: a leading `#if ... #end` parses as an
        // expression statement, and imports may still follow it.
        repeat(choice($.import, $.using, $._type_decl, $._expr_statement)),
      ),

    //////////////////////////////////////////////////////////////////////////

    _expr_statement: ($) => seq($._Expr, optional($._semicolon)),

    _type_decl: ($) =>
      seq(
        field("meta", repeat($.MetaDataEntry)),
        choice($.AbstractType, $.ClassType, $.DefType, $.EnumType),
      ),

    property_accessor: ($) =>
      seq(
        "(",
        field("get", $.property_access),
        ",",
        field("set", $.property_access),
        ")",
      ),
    property_access: ($) =>
      choice(
        alias("default", $.default),
        alias("get", $.get),
        alias("set", $.set),
        alias("dynamic", $.dynamic),
        alias("never", $.never),
        $.null,
        $.identifier,
      ),
    false: (_) => "false",
    modifier: (_) =>
      choice(
        prec(
          30,
          choice("inline", "static", "dynamic", "override", "extern", "overload"),
        ),
        "final",
        "enum",
      ),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,
    package_name: (_) => /[a-z_][a-zA-Z0-9_]*/,
    // Higher lexical precedence so an uppercase word prefers `type_name` over
    // `identifier` in states where both are valid (e.g. unnamed function-type
    // args `(Int, String) -> T`); lowercase words still fall back to identifier.
    type_name: (_) => token(prec(1, /[A-Z][a-zA-Z0-9_]*/)),
    optional: (_) => "?",
    conditional: ($) => conditional($),
    compile_condition: ($) =>
      choice(
        $.identifier,
        alias("macro", $.identifier),
        $.Int,
        $.Float,
        $.String,
        seq("(", $.compile_condition, ")"),
        prec.left(7, seq($.compile_condition, ".", $.identifier)),
        // Function-call form, e.g. `version("1.10.0")` in `#if (hl_ver >= version(...))`.
        prec.left(7, seq($.compile_condition, "(", commaSep($.compile_condition), ")")),
        prec.right(6, seq("!", $.compile_condition)),
        prec.left(
          5,
          seq($.compile_condition, choice("*", "/", "%"), $.compile_condition),
        ),
        prec.left(
          4,
          seq($.compile_condition, choice("+", "-"), $.compile_condition),
        ),
        prec.left(
          3,
          seq(
            $.compile_condition,
            choice(">", ">=", "<", "<=", "==", "!="),
            $.compile_condition,
          ),
        ),
        prec.left(2, seq($.compile_condition, "&&", $.compile_condition)),
        prec.left(1, seq($.compile_condition, "||", $.compile_condition)),
      ),
    _conditional_body: ($) =>
      choice(
        // ISSUE: adding everything sucks
        $.import,
        $.using,
        $._class_field,
        $._expr_statement,
        $._type_decl,
        $.visibility,
        // Lone field-modifier keywords, e.g. `public #if !cppia inline #end function`.
        $.modifier,
        // Class-heritage clauses, e.g. `extends D #if !flag implements Dynamic #end`.
        seq("extends", field("extends", $.TypePath)),
        seq("implements", field("implements", $.TypePath)),
        $.conditional_error,
        repeat1($.MetaDataEntry),
        // Pieces of an enclosing list (array, arguments, object or structure
        // fields): `[#if a "x", "y" #end]`, `{ #if a f: 1, #end }`. A structure
        // field is read as an object field, so its type must look like an
        // expression (`f: a.B`, not `f: Array<T>`).
        ",",
        $._object_field,
        // Clauses of an enclosing `try` / `switch`.
        $._catch,
        $.switch_case,
        $.switch_default,
      ),
    conditional_elseif: ($) =>
      seq("#elseif", $.compile_condition, repeat($._conditional_body)),
    conditional_else: ($) => seq("#else", repeat($._conditional_body)),
    conditional_end: (_) => "#end",
  },
});
