test/corpus/complex_type.txt
====================
function type with named and optional args
====================

typedef Cb = (?x:Int, y:String) -> Bool;

---

(module
  (DefType
    (type_name)
    (ComplexType
      (optional)
      (identifier)
      (ComplexType
        (TypePath
          (type_name)))
      (identifier)
      (ComplexType
        (TypePath
          (type_name)))
      (ComplexType
        (TypePath
          (type_name))))))

====================
function type unnamed multi-arg
====================

typedef Cb = (Int, String) -> Bool;

---

(module
  (DefType
    (type_name)
    (ComplexType
      (ComplexType
        (TypePath
          (type_name)))
      (ComplexType
        (TypePath
          (type_name)))
      (ComplexType
        (TypePath
          (type_name))))))

====================
rest argument type
====================

typedef Cb = (...Int) -> Void;

---

(module
  (DefType
    (type_name)
    (ComplexType
      (ComplexType
        (TypePath
          (type_name)))
      (ComplexType
        (TypePath
          (type_name))))))

====================
const type parameters
====================

typedef V = Vector<3>;

---

(module
  (DefType
    (type_name)
    (ComplexType
      (TypePath
        (type_name)
        (Int)))))

=====================================
anonymous structure type (comma form)
=====================================

class C { var u:{sec:Int, usec:Int}; }

---

(module
  (ClassType
    name: (type_name)
    (ClassVar
      name: (identifier)
      type: (ComplexType
        (TAnonymous
          (Field
            name: (identifier)
            type: (ComplexType
              (TypePath
                name: (type_name))))
          (Field
            name: (identifier)
            type: (ComplexType
              (TypePath
                name: (type_name)))))))))

=====================================
empty anonymous structure type
=====================================

class C { var h:{}; }

---

(module
  (ClassType
    name: (type_name)
    (ClassVar
      name: (identifier)
      type: (ComplexType
        (TAnonymous)))))

=====================================
function type with a package path in the parenthesised arguments
=====================================

class C {
	var run : (Int, h3d.Engine) -> Void;
	var cb : (haxe.io.Bytes -> Void) -> Void;
	var p : (h3d.Engine);
}

---

(module
  (ClassType
    name: (type_name)
    (ClassVar
      name: (identifier)
      type: (ComplexType
        arg: (ComplexType
          (TypePath
            name: (type_name)))
        arg: (ComplexType
          (TypePath
            pack: (package_name)
            name: (type_name)))
        ret: (ComplexType
          (TypePath
            name: (type_name)))))
    (ClassVar
      name: (identifier)
      type: (ComplexType
        arg: (ComplexType
          arg: (TypePath
            pack: (package_name)
            pack: (package_name)
            name: (type_name))
          ret: (ComplexType
            (TypePath
              name: (type_name))))
        ret: (ComplexType
          (TypePath
            name: (type_name)))))
    (ClassVar
      name: (identifier)
      type: (ComplexType
        (ComplexType
          (TypePath
            pack: (package_name)
            name: (type_name)))))))

=====================================
anonymous structure var type without a semicolon
=====================================

class C {
	var pos : { x : Float, y : Float }
	var b : Int;
}

---

(module
  (ClassType
    name: (type_name)
    (ClassVar
      name: (identifier)
      type: (ComplexType
        (TAnonymous
          (Field
            name: (identifier)
            type: (ComplexType
              (TypePath
                name: (type_name))))
          (Field
            name: (identifier)
            type: (ComplexType
              (TypePath
                name: (type_name)))))))
    (ClassVar
      name: (identifier)
      type: (ComplexType
        (TypePath
          name: (type_name))))))
