test/corpus/conditional.txt
=======================
conditional compilation
=======================

#if debug
#elseif !other
#elseif another
#elseif (debug_level > 3)
#elseif 0 == 0
#elseif 0 != 0
#elseif 0 > 0
#elseif 0 < 0
#elseif 0 <= 0
#elseif 0 >= 0
#elseif (a && b)
#elseif (a || b) && ( c > d || (e!=f))
#else
#end

---

(module
  (conditional
    (compile_condition
      (identifier))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (identifier))))
    (conditional_elseif
      (compile_condition
        (identifier)))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (compile_condition
            (identifier))
          (compile_condition
            (Int)))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (Int))
        (compile_condition
          (Int))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (Int))
        (compile_condition
          (Int))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (Int))
        (compile_condition
          (Int))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (Int))
        (compile_condition
          (Int))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (Int))
        (compile_condition
          (Int))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (Int))
        (compile_condition
          (Int))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (compile_condition
            (identifier))
          (compile_condition
            (identifier)))))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (compile_condition
            (compile_condition
              (identifier))
            (compile_condition
              (identifier))))
        (compile_condition
          (compile_condition
            (compile_condition
              (compile_condition
                (identifier))
              (compile_condition
                (identifier)))
            (compile_condition
              (compile_condition
                (compile_condition
                  (identifier))
                (compile_condition
                  (identifier))))))))
    (conditional_else)
    (conditional_end)))

===================================
conditional compilation with macros
===================================

#if !macro
@:build(my.App.build())
#end
class A {}

---

(module
  (conditional
    (compile_condition
      (compile_condition
        (identifier)))
    (MetaDataEntry
      name: (identifier)
      params: (ECall
        callee: (EField
          object: (EField
            object: (identifier)
            name: (identifier))
          name: (identifier))))
    (conditional_end))
  (ClassType
    name: (type_name)))

==========================================
compile-condition call expression in #if
==========================================

#if (hl_ver >= version("1.10.0"))
class C {}
#end

---

(module
  (conditional
    (compile_condition
      (compile_condition
        (compile_condition
          (identifier))
        (compile_condition
          (compile_condition
            (identifier))
          (compile_condition
            (String
              (fragment))))))
    (ClassType
      name: (type_name))
    (conditional_end)))

==========================================
modifier keyword in conditional body
==========================================

class C {
  public #if !cppia inline #end function f() {}
}

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      (conditional
        (compile_condition
          (compile_condition
            (identifier)))
        (modifier)
        (conditional_end))
      name: (identifier)
      body: (EBlock))))

==========================================
conditional in for-in expression position
==========================================

class C {
  function f() { for (c in #if neko a #else b #end) {} }
}

---

(module
  (ClassType
    name: (type_name)
    (ClassMethod
      name: (identifier)
      body: (EBlock
        (EFor
          var: (identifier)
          iterable: (conditional
            (compile_condition
              (identifier))
            (identifier)
            (conditional_else
              (identifier))
            (conditional_end))
          body: (EBlock))))))

==========================================
conditional in class heritage position
==========================================

extern class C extends D #if !flash_strict implements Dynamic #end {}

---

(module
  (ClassType
    name: (type_name)
    extends: (TypePath
      name: (type_name))
    (conditional
      (compile_condition
        (compile_condition
          (identifier)))
      implements: (TypePath
        name: (type_name))
      (conditional_end))))

==========================================
conditional condition regression forms
==========================================

#if !flag
class A {}
#elseif (defined)
class B {}
#elseif (python_version >= 3.4)
class D {}
#end

---

(module
  (conditional
    (compile_condition
      (compile_condition
        (identifier)))
    (ClassType
      name: (type_name))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (identifier)))
      (ClassType
        name: (type_name)))
    (conditional_elseif
      (compile_condition
        (compile_condition
          (compile_condition
            (identifier))
          (compile_condition
            (Float))))
      (ClassType
        name: (type_name)))
    (conditional_end)))

=====================================
conditional holding the tail of an expression
=====================================

var a = b == c #if x && false #end;
var d = (e) #if js | 0 #end;

---

(module
  (EVars
    name: (identifier)
    value: (EBinop
      left: (identifier)
      right: (identifier)))
  (conditional
    (compile_condition
      (identifier))
    (conditional_binop
      right: (false))
    (conditional_end))
  (EVars
    name: (identifier)
    value: (identifier))
  (conditional
    (compile_condition
      (identifier))
    (conditional_binop
      right: (Int))
    (conditional_end)))

=====================================
conditional holding a result type annotation
=====================================

function f(a:Int) #if haxe4 : ObjectField #end {
}

---

(module
  (EFunction
    name: (identifier)
    args: (FunctionArg
      name: (identifier)
      type: (ComplexType
        (TypePath
          name: (type_name))))
    body: (conditional
      (compile_condition
        (identifier))
      type: (ComplexType
        (TypePath
          name: (type_name)))
      (conditional_end)))
  (EObjectDecl))

=====================================
conditional type name before the type parameters
=====================================

var m : Map<Int,#if hl hl.NativeArray #else Array #end<T>>;

---

(module
  (EVars
    name: (identifier)
    type: (ComplexType
      (TypePath
        name: (type_name)
        params: (ComplexType
          (TypePath
            name: (type_name)))
        params: (ComplexType
          (TConditional
            (compile_condition
              (identifier))
            (ComplexType
              (TypePath
                pack: (package_name)
                name: (type_name)))
            (ComplexType
              (TypePath
                name: (type_name)))
            (conditional_end))
          params: (ComplexType
            (TypePath
              name: (type_name))))))))

=====================================
conditional ending in else, and conditional else clause
=====================================

function f() {
	#if a
	if( b )
		c();
	else
	#end
	d();
	if( b ) {
		c();
	}
	#if a
	else
		d();
	#end
}

---

(module
  (EFunction
    name: (identifier)
    body: (EBlock
      (conditional
        (compile_condition
          (identifier))
        (EIf
          cond: (identifier)
          if: (ECall
            callee: (identifier)))
        (conditional_end))
      (ECall
        callee: (identifier))
      (EIf
        cond: (identifier)
        if: (EBlock
          (ECall
            callee: (identifier))))
      (conditional
        (compile_condition
          (identifier))
        else: (ECall
          callee: (identifier))
        (conditional_end)))))

=====================================
conditional optional structure field
=====================================

typedef T = {
	?a : Int,
#if x
	?b : Array<Bool>,
#end
};

---

(module
  (DefType
    name: (type_name)
    type: (ComplexType
      (TAnonymous
        (Field
          (optional)
          name: (identifier)
          type: (ComplexType
            (TypePath
              name: (type_name))))
        (conditional
          (compile_condition
            (identifier))
          (Field
            (optional)
            name: (identifier)
            type: (ComplexType
              (TypePath
                name: (type_name)
                params: (ComplexType
                  (TypePath
                    name: (type_name))))))
          (conditional_end))))))

=====================================
local static var under #if is a variable, not a class field
=====================================

function f() {
	#if x
	static var z = 1;
	#else
	static final w = 2;
	#end
}

class A {
	#if y
	@:meta static var a(default, never):Int;
	@:m inline static function g() {}
	#end
}

---

(module
  (EFunction
    name: (identifier)
    body: (EBlock
      (conditional
        (compile_condition
          (identifier))
        (EVars
          name: (identifier)
          value: (Int))
        (conditional_else
          (EVars
            name: (identifier)
            value: (Int)))
        (conditional_end))))
  (ClassType
    name: (type_name)
    (conditional
      (compile_condition
        (identifier))
      (MetaDataEntry
        name: (identifier))
      (ClassVar
        name: (identifier)
        (property_accessor
          get: (property_access
            (default))
          set: (property_access
            (never)))
        type: (ComplexType
          (TypePath
            name: (type_name))))
      (MetaDataEntry
        name: (identifier))
      (ClassMethod
        name: (identifier)
        body: (EBlock))
      (conditional_end))))
